# cookiecutter-python-modern-ecosystem

./: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  hello.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
init_repo_template_uv/: __main__.py  pyproject.toml
init_repo_template_uv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/init_repo_template_uv/: __init__.py  __main__.py
src/init_repo_template_uv/entry_points/: _say_hello.py  _sync_files.py
test_uv/: __main__.py
test_uv/entry_points/: __init__.py  _say_hello.py
tests/: test_main.py
{{ cookiecutter.project_slug }}/: .cruft.json  .pre-commit-config.yaml  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/.devcontainer/: Dockerfile  devcontainer.json
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: __main__.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/entry_points/: __init__.py  _say_hello.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/sync_files/: __init__.py  hey.py
{{ cookiecutter.project_slug }}/tests/: test_main.py
