[project]
name = "init-repo-template-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pre-commit>=3.7.1",
    "ruff>=0.4.6",
    "pytest>=8.3.3",
    "loguru>=0.7.2",
    "click>=8.1.7",
    "pyright>=1.1.389",
    "mypy>=1.14.1",
]

[project.scripts]
init-repo-template-uv = "init_repo_template_uv.__main__:_main"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
lint.select = ["ALL"]
lint.ignore = [
    "ANN002", "ANN003", "ANN401", "COM812", "D203", "D205", "D213", "D402", "EXE002", "FA102",
    "ISC001", "PD901", "PGH003", "PLR0913", "S101", "TRY003"
]

[tool.ruff.lint.pydocstyle]
convention = "google"
